Rewrite IDE in Swing