@@ -14,10 +14,9 @@
     <name>JVisualG</name>
 
     <properties>
-        <mainClass>dev.thihup.jvisualg.ide.Main</mainClass>
+        <mainClass>dev.thihup.jvisualg.ide.SwingIDE</mainClass>
         <native.maven.plugin.version>0.9.12</native.maven.plugin.version>
         <imageName>JVisualG</imageName>
-        <javafx.version>22</javafx.version>
         <autoClose>false</autoClose>
     </properties>
 
@@ -33,52 +32,27 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>${javafx.version}</version>
+            <groupId>com.fifesoft</groupId>
+            <artifactId>rsyntaxtextarea</artifactId>
+            <version>3.4.0</version>
         </dependency>
         <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>${javafx.version}</version>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.4.1</version>
         </dependency>
         <dependency>
-            <groupId>org.fxmisc.richtext</groupId>
-            <artifactId>richtextfx</artifactId>
-            <version>0.11.2</version>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+            <version>4.13.1</version>
+        </dependency>
+        <dependency>
+            <groupId>de.tisoft.rsyntaxtextarea</groupId>
+            <artifactId>rsyntaxtextarea-antlr4-extension</artifactId>
+            <version>0.0.3</version>
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <mainClass>${mainClass}</mainClass>
-                    <options>
-                        <option>-DautoClose=${autoClose}</option>
-                        <option>--add-exports=javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.base/com.sun.javafx.collections=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.base/com.sun.javafx=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED</option>
-                        <option>--add-exports=javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED</option>
-                    </options>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
     <profiles>
         <profile>
